orawire: fix REEXECUTE/array-execute bind-value desync (root cause found via real byte capture)
Two real, distinct wire-decoding bugs, both found by capturing a real
ojdbc client's raw TCP bytes against orawire (WARP_DEBUG_TTC_HEX /
WARP_DEBUG_TTC_EXECUTE field-tracing, since deleted) rather than
guessing at the TTC spec -- an earlier attempt to fix this by assuming
'numIters' carries an array-execute's row count was checked live and
found wrong (it reads 0 for every Execute observed, batched or not)
before being acted on.

1. A real DML array-execute (ojdbc's PreparedStatement.addBatch() +
   executeBatch()) sends N bind rows back-to-back in the SAME Execute
   message, each row self-delimited by its own ROW_DATA (0x07) tag
   byte, with NO row-count field anywhere on the wire.
   ExecuteRequestReader.readBindParams used to read exactly one row
   and stop, silently discarding every row after the first and
   leaving its bytes unconsumed -- corrupting the TTC stream for
   every message after it in the same session.

2. Reusing an already-parsed cursor with NEW bind values (a real
   FUNC_EXECUTE with cursorId != 0 and sqlText == null -- NOT a
   FUNC_REEXECUTE, confirmed live: ojdbc's addBatch()/executeBatch()
   never sends FUNC_REEXECUTE for this pattern) sends those values
   WITHOUT re-describing their types (bindsPointer reads 0, since the
   types were already described on the cursor's original parse).
   ExecuteRequestReader.read used to treat bindsPointer == 0 as 'no
   bind values at all', leaving those real trailing bytes completely
   unread.

Fix:
- ExecuteRequest now carries bindRows (one row per DML array-execute
  iteration) instead of a single bindParams list; bindParams stays as
  a convenience for the (overwhelmingly common) single-row case.
- ExecuteRequestReader.readAllBindValueRows reads one row, then keeps
  reading more for as long as the wire has another ROW_DATA tag,
  self-delimiting rather than depending on a count. Shared by both a
  fr